make knocked keys background blue

--- a/style.css
+++ b/style.css
@@ -100,29 +100,19 @@ p {
 }
 
 .key.closest-to-bottom {
-  outline: 10px solid #85C1E9;
+  box-shadow: 0 0 0 10px #85C1E9;
+  border-radius: 50%;
   transform: scale(1.1);
   transition: transform 0.3s ease;
 }
 
 .key.success-highlight {
-  outline: 10px solid #87cefa;
+  box-shadow: 0 0 0 10px #85C1E9;
+  border-radius: 50%;
   transform: scale(1.1);
-  /* border-radius: 50%; */
+  backgroundColor: "#87cefa";
   color: white;
   -webkit-appearance: none;
-}
-
-/* Safari */
-@media not all and (min-resolution:.001dpcm) {
-  @supports (-webkit-appearance:none) {
-    .key .success-highlight {
-      -webkit-box-shadow: 0px 0px 0px 5px #87cefa;
-      box-shadow: 0px 0px 0px 5px #87cefa;
-      border-radius: 50%;
-      color: white;
-    }
-  }
 }
 
 .success {
@@ -142,7 +132,6 @@ p {
     opacity: 0;
   }
 }
-
 
 
 .blink {
