--- a/style.css
+++ b/style.css
@@ -99,17 +99,22 @@ p {
   }
 }
 
+
 .key.closest-to-bottom {
+  /*
   box-shadow: 0 0 0 10px #85C1E9;
   border-radius: 50%;
   transform: scale(1.1);
   transition: transform 0.3s ease;
+  */
 }
 
 .key.success-highlight {
-  box-shadow: 0 0 0 10px #85C1E9;
+  /* 
+  box-shadow: 0 0 0 10px #85C1E9; 
   border-radius: 50%;
-  transform: scale(1.1);
+  transform: scale(1.1); 
+  */
   backgroundColor: "#87cefa";
   color: white;
   -webkit-appearance: none;
