--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
   align-items: center;
   height: 100vh;
   color: #333333;
+  padding-bottom: env(safe-area-inset-bottom);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -61,7 +62,7 @@ p {
   width: calc(100% - 40px);
 }
 
-@media screen and (min-width: 720px) {
+@media screen and (min-width: 767px) {
   #game-board {
     width: calc(90% - 40px);
   }
@@ -70,6 +71,27 @@ p {
 @media screen and (min-width: 960px) {
   #game-board {
     width: calc(80% - 40px);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  body {
+    font-size: 16px;
+  }
+  h1 {
+    font-size: 32px;
+  }
+  .key {
+    font-size: 48px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .key {
+    width: 120px;
+    height: 120px;
+    line-height: 100px;
+    font-size: 36px;
   }
 }
 
