hide overflown content, updated some styling.

--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  color: #333333;
-  padding-bottom: env(safe-area-inset-bottom);
+  color: #373D3F;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -21,7 +21,6 @@ h1, h2, h3, h4, h5, h6 {
 
 h2 {
   font-size: 2rem;
-  color: #333333;
 }
 
 p {
@@ -30,7 +29,6 @@ p {
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.5;
-  color: #555555;
 }
 
 #reset-button {
@@ -50,16 +48,26 @@ p {
 
 #game-board {
   position: relative;
-  height: calc(100vh - 160px);
+  height: calc(100vh - 100px);
+  /* height: calc(100vh - env(safe-area-inset-bottom) - 160px); */
   width: 60%;
   margin: 20px auto;
   border: none;
-  border-radius: 10px;
   overflow: hidden;
   background-color: #f7f7f7;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   /* Use CSS media queries to adjust width based on screen size */
   width: calc(100% - 40px);
+  /* bottom: env(safe-area-inset-bottom); */
+  touch-action: pan-x pan-y;
+}
+
+#game-board::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: #ccc;
+  margin-bottom: 20px;
 }
 
 @media screen and (min-width: 767px) {
@@ -122,21 +130,7 @@ p {
 }
 
 
-.key.closest-to-bottom {
-  /*
-  box-shadow: 0 0 0 10px #85C1E9;
-  border-radius: 50%;
-  transform: scale(1.1);
-  transition: transform 0.3s ease;
-  */
-}
-
 .key.success-highlight {
-  /* 
-  box-shadow: 0 0 0 10px #85C1E9; 
-  border-radius: 50%;
-  transform: scale(1.1); 
-  */
   backgroundColor: "#87cefa";
   color: white;
   -webkit-appearance: none;
