--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+* {
+  touch-action: manipulation;
+}
+
 body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Proxima Nova', Helvetica, Futura, Calibri, sans-serif;
   font-weight: 400;
   line-height: 1.5;
   background-color: #f8f8f8;
@@ -31,6 +35,7 @@ p {
   line-height: 1.5;
 }
 
+/*
 #reset-button {
   font-size: 1em;
   padding: 0.5em 1em;
@@ -45,6 +50,39 @@ p {
 #reset-button:hover {
   background-color: #c0392b;
 }
+*/
+
+#button-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 60%;
+  max-width: 600px;
+  margin-top: 10px;
+}
+
+#reset-button, #about-button {
+  font-size: 1em;
+  padding: 0.5em 1em;
+  background-color: #76bce8;
+  border: none;
+  color: white;
+  border-radius: 0.5em;
+  cursor: pointer;
+  width: calc(50% - 10px);
+}
+
+#reset-button {
+  background-color: #63aad6;
+}
+
+#about-button {
+  background-color: #c3d0d9;
+}
+
+#reset-button:hover, #about-button:hover {
+  background-color: #76bce8;
+}
 
 #game-board {
   position: relative;
@@ -56,9 +94,8 @@ p {
   overflow: hidden;
   background-color: #f7f7f7;
   /* Use CSS media queries to adjust width based on screen size */
-  width: calc(100% - 40px);
-  /* bottom: env(safe-area-inset-bottom); */
-  touch-action: pan-x pan-y;
+  width: 100%;
+  touch-action: none; /* disable default touch behaviors like pinch zoom and double tap zoom.*/
 }
 
 #game-board::before {
@@ -167,3 +204,81 @@ p {
     opacity: 0;
   }
 }
+
+
+/* The modal container */
+.modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Style for the modal content */
+.modal-content {
+  background-color: #f7f7f7;
+  border-radius: 5px;
+  padding: 1.5em;
+  max-width: 60%;
+  text-align: left;
+  position: relative;
+  overflow: auto;
+  max-height: 90vh;
+}
+
+/* Style for the modal title */
+.modal-title {
+  font-weight: 700;
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+}
+
+/* Style for the links */
+.modal-content a {
+  color: #3498db;
+}
+
+/* Style for the close button */
+.modal-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 1.5em;
+  font-weight: 700;
+  cursor: pointer;
+  padding: 0.5em;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 767px) {
+  .modal {
+    font-size: 16px;
+    
+  }
+  .modal-content {
+    margin: 20% auto;
+    width: calc(90% - 40px);
+  }
+}
+
